--- a/prostate.html
+++ b/prostate.html
@@ -102,8 +102,8 @@ Prostate bed RT dose (cGy):<br>
     <h2>10 Year Freedom from Biochemical Failure:</h2><h1 style="color:red"><span id="10year"></span></h1>
 </div>
 <div id="footer">
-    Creutzberg et al.<br>
-    Int J Radiation Oncol Biol Phys, Vol. 91, No. 3, pp. 530e539, 2015
+    Tendulkar et al.<br>
+    Journal of Clinical Oncology, Vol. 34, No. 30, pp. 3648e3654, 2016
 </div>
 
 </body>
